--- a/example-game/index.html
+++ b/example-game/index.html
@@ -1,7 +1,11 @@
 <!DOCTYPE html>
 <html>
     <body>
-        <a href="/example-game/S1901R.html">Spring 1901 resolution</a>
-        <a href="/example-game/S1901M.svg">Spring 1901 moves</a>
+        <p><a href="/example-game/S1901R.html">Spring 1901 orders and resolution</a></p>
+        <p><a href="/example-game/S1901M.svg">Spring 1901 moves visualised</a></p>
+        <p><a href="/example-game/S1901P.svg">Spring 1901 resulting position</a></p>
+        <p><a href="/example-game/W1901R.html">Fall 1901 orders and resolution</a></p>
+        <p><a href="/example-game/W1901M.svg">Fall 1901 moves visualised</a></p>
+        <p><a href="/example-game/W1901P.svg">Fall 1901 resulting position</a></p>
     </body>
 </html>
