--- a/example-game/index.html
+++ b/example-game/index.html
@@ -6,6 +6,13 @@
         <p><a href="/example-game/S1901P.svg">Spring 1901 resulting position</a></p>
         <p><a href="/example-game/W1901R.html">Fall 1901 orders and resolution</a></p>
         <p><a href="/example-game/W1901M.svg">Fall 1901 moves visualised</a></p>
-        <p><a href="/example-game/W1901P.svg">Fall 1901 resulting position</a></p>
+        <p><a href="/example-game/W1901A.html">Fall 1901 adjustment (build) orders</a></p>
+        <p><a href="/example-game/W1901B.svg">Fall 1901 resulting position (including builds)</a></p>
+        <p><a href="/example-game/S1901R.html">Spring 1902 orders and resolution</a></p>
+        <p><a href="/example-game/S1902M.svg">Spring 1902 moves visualised</a></p>
+        <p><a href="/example-game/W1902R.html">Fall 1902 orders and resolution</a></p>
+        <p><a href="/example-game/W1902M.svg">Fall 1902 moves visualised</a></p>
+        <p><a href="/example-game/W1902R.svg">Fall 1902 retreats</a></p>
+        <p><a href="/example-game/W1902B.svg">Fall 1902 resulting position (including builds and disbandments)</a></p>
     </body>
 </html>
