--- a/example-game/index.html
+++ b/example-game/index.html
@@ -13,6 +13,7 @@
         <p><a href="/example-game/W1902R.html">Fall 1902 orders and resolution</a></p>
         <p><a href="/example-game/W1902M.svg">Fall 1902 moves visualised</a></p>
         <p><a href="/example-game/W1902R.svg">Fall 1902 retreats</a></p>
+        <p><a href="/example-game/W1902A.html">Fall 1902 adjustment (build and remove) orders</a></p>
         <p><a href="/example-game/W1902B.svg">Fall 1902 resulting position (including builds and disbandments)</a></p>
     </body>
 </html>
