--- a/example-game/index.html
+++ b/example-game/index.html
@@ -15,5 +15,7 @@
         <p><a href="/example-game/W1902R.svg">Fall 1902 retreats</a></p>
         <p><a href="/example-game/W1902A.html">Fall 1902 adjustment (build and remove) orders</a></p>
         <p><a href="/example-game/W1902B.svg">Fall 1902 resulting position (including builds and disbandments)</a></p>
+        <p><a href="/example-game/S1903status">Spring 1903 status</a></p>
+        <p><a href="/example-game/supplycentresummary.html">Supply centre history</a></p>
     </body>
 </html>
