Set up actual game

--- a/example-game/index.html
+++ b/example-game/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
     <body>
+    <div style="float: left; width: 40%; padding: 20px; background: #ccc">
+        <h2>Example game</h2>
         <p><a href="/example-game/S1901R.html">Spring 1901 orders and resolution</a></p>
         <p><a href="/example-game/S1901M.svg">Spring 1901 moves visualised</a></p>
         <p><a href="/example-game/S1901P.svg">Spring 1901 resulting position</a></p>
@@ -17,5 +19,11 @@
         <p><a href="/example-game/W1902B.svg">Fall 1902 resulting position (including builds and disbandments)</a></p>
         <p><a href="/example-game/S1903status">Spring 1903 status</a></p>
         <p><a href="/example-game/supplycentresummary.html">Supply centre history</a></p>
+    </div>
+    <div style="float: left; width: 40%; padding: 20px">
+        <h2>Actual game</h2>
+        <p><a href="../diplomacy/status.html">Status</a></p>
+        <p><a href="../diplomacy/map.svg">Map</a></p>
+    </div>
     </body>
 </html>
