--- a/example-game/index.html
+++ b/example-game/index.html
@@ -23,7 +23,8 @@
     <div style="float: left; width: 40%; padding: 20px">
         <h2>Actual game</h2>
         <p><a href="../diplomacy/status.html">Status</a></p>
-        <p><a href="../diplomacy/map.svg">Map</a></p>
+        <p><a href="../diplomacy/orders.svg">Orders visualised</a></p>
+        <p><a href="../diplomacy/map.svg">New positions</a></p>
     </div>
     </body>
 </html>
