--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -10,6 +10,9 @@
     <title></title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://www.w3schools.com/lib/w3.js"></script>
+<style>
+.mySlides {display:none;}
+</style>
 
     <!--[if IE]>
     <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
@@ -24,8 +27,38 @@
 </div>
 
 <div style="margin-left:25%">
-  <p>... page content ...</p>
+<h2 class="w3-center">Manual Slideshow</h2>
+
+<div class="w3-content w3-display-container">
+  <img class="mySlides" src="static/Standard (6 Players)-S1870M.png" style="width:100%">
+  <img class="mySlides" src="static/Standard (6 Players)-S1870Ma.png" style="width:100%">
+  <img class="mySlides" src="static/Standard (6 Players)-F1870M.png" style="width:100%">
+
+  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
+</div>
+<script>
+var slideIndex = 1;
+showDivs(slideIndex);
+
+function plusDivs(n) {
+  showDivs(slideIndex += n);
+}
+
+function showDivs(n) {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  if (n > x.length) {slideIndex = 1}
+  if (n < 1) {slideIndex = x.length}
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  x[slideIndex-1].style.display = "block";  
+}
+</script>
+
+
 
   </body>
 </html>
