Menu, order stats, supply centre history

--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -27,19 +27,19 @@
 </div>
 
 <div style="margin-left:25%">
-<h2 class="w3-center">Manual Slideshow</h2>
+
 
 <div class="w3-content w3-display-container">
-  <img class="mySlides" src="static/Standard (6 Players)-S1870M.png" style="width:100%">
-  <img class="mySlides" src="static/Standard (6 Players)-S1870Ma.png" style="width:100%">
-  <img class="mySlides" src="static/Standard (6 Players)-F1870M.png" style="width:100%">
+  <div class="mySlides"><h2 class="w3-center">Spring 1870 disposition</h2><img src="static/Standard (6 Players)-S1870M.png" style="width:100%"></div>
+  <div class="mySlides"><h2 class="w3-center">Spring 1870 movement orders</h2><img src="static/Standard (6 Players)-S1870Ma.png" style="width:100%"></div>
+  <div class="mySlides"><h2 class="w3-center">Fall 1870 disposition</h2><img src="static/Standard (6 Players)-F1870M.png" style="width:100%"></div>
 
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
 </div>
 </div>
 <script>
-var slideIndex = 1;
+var slideIndex = 0;
 showDivs(slideIndex);
 
 function plusDivs(n) {
