--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -20,13 +20,16 @@
   </head>
   <body>
 
-<div class="w3-sidebar w3-bar-block" style="width:25%">
-  <a href="#" class="w3-bar-item w3-button">Link 1</a>
-  <a href="#" class="w3-bar-item w3-button">Link 2</a>
-  <a href="#" class="w3-bar-item w3-button">Link 3</a>
+<div class="w3-sidebar w3-bar-block w3-gray" style="width:20%">
+  <h3 class="w3-center w3-black">Menu</h3>
+  <a href="#" class="w3-bar-item w3-button">Maps</a>
+  <a href="#" class="w3-bar-item w3-button">Results</a>
+  <a href="#" class="w3-bar-item w3-button">Status</a>
+  <a href="order-statistics.html" class="w3-bar-item w3-button">Order statistics</a>
+  <a href="supply-centre-history.html" class="w3-bar-item w3-button">Supply centre history</a>
 </div>
 
-<div style="margin-left:25%">
+<div style="margin-left:20%">
 
 
 <div class="w3-content w3-display-container">
