--- a/diplomacy/order-statistics.html
+++ b/diplomacy/order-statistics.html
@@ -16,14 +16,14 @@
     <![endif]-->
   </head>
   <body>
-<div class="w3-sidebar w3-bar-block" style="width:20%">
-  <h3>Menu</h3>
+<div class="w3-sidebar w3-bar-block w3-gray" style="width:20%">
+  <h3 class="w3-center w3-black">Menu</h3>
   <a href="index.html" class="w3-bar-item w3-button">Maps/ Results/ Status</a>
   <a href="#" class="w3-bar-item w3-button">Order statistics</a>
   <a href="supply-centre-history.html" class="w3-bar-item w3-button">Supply centre history</a>
 </div>
 
-<div style="margin-left:25%">
+<div style="margin-left:20%">
 
   <div class="w3-content w3-display-container">
     <h2 class="w3-center">Order statistics</h2>
