--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://www.w3schools.com/lib/w3.js"></script>
 <style>
-.mySlides {display:none;}
+.mySlides, .results, .status {display:none;}
 </style>
 
     <!--[if IE]>
@@ -22,9 +22,9 @@
 
 <div class="w3-sidebar w3-bar-block w3-gray" style="width:20%">
   <h3 class="w3-center w3-black">Menu</h3>
-  <a href="#" class="w3-bar-item w3-button">Maps</a>
-  <a href="#" class="w3-bar-item w3-button">Results</a>
-  <a href="#" class="w3-bar-item w3-button">Status</a>
+  <button class="w3-bar-item w3-button" onclick="maps()">Maps</button>
+  <button class="w3-bar-item w3-button" onclick="results()">Results</button>
+  <button class="w3-bar-item w3-button" onclick="status()">Status</button>
   <a href="order-statistics.html" class="w3-bar-item w3-button">Order statistics</a>
   <a href="supply-centre-history.html" class="w3-bar-item w3-button">Supply centre history</a>
 </div>
@@ -33,12 +33,39 @@
 
 
 <div class="w3-content w3-display-container">
-  <div class="mySlides"><h2 class="w3-center">Spring 1870 disposition</h2><img src="static/Standard (6 Players)-S1870M.png" style="width:100%"></div>
-  <div class="mySlides"><h2 class="w3-center">Spring 1870 movement orders</h2><img src="static/Standard (6 Players)-S1870Ma.png" style="width:100%"></div>
-  <div class="mySlides"><h2 class="w3-center">Fall 1870 disposition</h2><img src="static/Standard (6 Players)-F1870M.png" style="width:100%"></div>
+  <div class="mySlides">
+    <h2 class="w3-center">Spring 1870 disposition</h2>
+    <img class="maps" src="static/Standard (6 Players)-S1870M.png" style="width:100%">
+	<p class="results">No results - this is the initial position.</p>
+	<iframe class="status" src="static/S1870Dsta.html" width="100%" height="2000" style="border:none;"></iframe>
+  </div>
+  <div class="mySlides">
+    <h2 class="w3-center">Spring 1870 movement orders</h2>
+    <img class="maps" src="static/Standard (6 Players)-S1870Ma.png" style="width:100%">
+	<iframe class="results" src="static/S1870Mres.html" width="100%" height="2000" style="border:none;"></iframe>
+	<iframe class="status" src="static/S1870Msta.html" width="100%" height="2000" style="border:none;"></iframe>
+  </div>
+  <div class="mySlides">
+    <h2 class="w3-center">Fall 1870 disposition</h2>
+    <img class="maps" src="static/Standard (6 Players)-F1870M.png" style="width:100%">
+	<iframe class="results" src="static/F1870Mres.html" width="100%" height="2000" style="border:none;"></iframe>
+	<iframe class="status" src="static/F1870Msta.html" width="100%" height="2000" style="border:none;"></iframe>
+  </div>
+  <div class="mySlides">
+    <h2 class="w3-center">Fall 1870 movement orders</h2>
+    <img class="maps" src="static/Standard (6 Players)-F1870Ma.png" style="width:100%">
+	<iframe class="results" src="static/F1870Mres.html" width="100%" height="2000" style="border:none;"></iframe>
+	<iframe class="status" src="static/F1870Msta.html" width="100%" height="2000" style="border:none;"></iframe>
+  </div>
+  <div class="mySlides">
+    <h2 class="w3-center">Fall 1870 adjustments</h2>
+    <img class="maps" src="static/Standard (6 Players)-F1870B.png" style="width:100%">
+	<p class="results">No results - deadline for issuing build orders is Thursday 11th February at 1200 GMT.</p>
+	<iframe class="status" src="static/F1870Asta.html" width="100%" height="2000" style="border:none;"></iframe>
+  </div>
 
-  <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
-  <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
+  <button class="w3-button w3-black w3-display-topleft" onclick="plusDivs(-1)">&#10094;</button>
+  <button class="w3-button w3-black w3-display-topright" onclick="plusDivs(1)">&#10095;</button>
 </div>
 </div>
 <script>
@@ -59,6 +86,53 @@ function showDivs(n) {
   }
   x[slideIndex-1].style.display = "block";  
 }
+
+function maps() {
+  var i;
+  var x = document.getElementsByClassName("maps");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "block";  
+  }
+  var x = document.getElementsByClassName("results");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  var x = document.getElementsByClassName("status");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+}
+function results() {
+  var i;
+  var x = document.getElementsByClassName("maps");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  var x = document.getElementsByClassName("results");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "block";  
+  }
+  var x = document.getElementsByClassName("status");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+}
+function status() {
+  var i;
+  var x = document.getElementsByClassName("maps");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  var x = document.getElementsByClassName("results");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";  
+  }
+  var x = document.getElementsByClassName("status");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "block";  
+  }
+}
+  
 </script>
 
 
