--- a/diplomacy/static/order statistics.html
+++ b/diplomacy/static/order statistics.html
@@ -77,6 +77,35 @@
             75%
           </td>
         </tr>
+        <tr>
+          <td>
+            <b>Fall, 1870</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            67%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            33%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            50%
+          </td>
+          <td>
+            67%
+          </td>
+          <td>
+            60%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -147,6 +176,35 @@
           </td>
           <td>
             88%
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <b>Fall, 1870</b>
+          </td>
+          <td>
+            
+          </td>
+          <td>
+            50%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            33%
+          </td>
+          <td>
+            
+          </td>
+          <td>
+            67%
+          </td>
+          <td>
+            67%
+          </td>
+          <td>
+            63%
           </td>
         </tr>
       </table>
@@ -221,6 +279,35 @@
             0%
           </td>
         </tr>
+        <tr>
+          <td>
+            <b>Fall, 1870</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            33%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            25%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            23%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -268,6 +355,35 @@
         <tr bgcolor="#E6EEF0">
           <td>
             <b>Spring, 1870</b>
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <b>Fall, 1870</b>
           </td>
           <td>
             0%
