--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -49,7 +49,7 @@
     <h2 class="w3-center">Fall 1870 starting position</h2>
     <img class="maps" src="static/Standard (6 Players)-F1870M.png" style="width:100%">
     <h3 class="results">No results - this is the initial position.</h3>
-    <iframe class="status" src="static/F1870Msta.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/F1870Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
   <div class="rounds">
     <h2 class="w3-center">Fall 1870 movement orders</h2>
