--- a/diplomacy/static/F1870Dsta.html
+++ b/diplomacy/static/F1870Dsta.html
@@ -140,29 +140,25 @@
       <b>Austria</b>
     </div>
     <div class="indent2cm">
-      Austria: A vie Supports A bud<br>Austria: A bud Supports A vie<br><b>1 
-      unit does not have orders.</b><br>
+      No orders submitted.<br>
     </div>
     <div class="indent1cm">
       <b>England</b>
     </div>
     <div class="indent2cm">
-      England: F nwg -&gt; nwy<br>England: A yor -&gt; hol<br>England: F nth 
-      Convoys A yor -&gt; hol<br>
+      No orders submitted.<br>
     </div>
     <div class="indent1cm">
       <b>France</b>
     </div>
     <div class="indent2cm">
-      France: A pie -&gt; tyr<br>France: F pic -&gt; bel<br>France: A bur 
-      Supports F pic -&gt; bel<br>
+      No orders submitted.<br>
     </div>
     <div class="indent1cm">
       <b>Germany</b>
     </div>
     <div class="indent2cm">
-      Germany: A ber -&gt; kie<br>Germany: F den -&gt; swe<br>Germany: A ruh 
-      -&gt; hol<br>
+      No orders submitted.<br>
     </div>
     <div class="indent1cm">
       <b>Italy</b>
@@ -174,15 +170,13 @@
       <b>Russia</b>
     </div>
     <div class="indent2cm">
-      Russia: F bot -&gt; swe<br>Russia: A gal -&gt; rum<br>Russia: F sev 
-      Supports A gal -&gt; rum<br>Russia: A war -&gt; gal<br>
+      No orders submitted.<br>
     </div>
     <div class="indent1cm">
       <b>Turkey</b>
     </div>
     <div class="indent2cm">
-      Turkey: A bul -&gt; gre<br>Turkey: A con -&gt; bul<br>Turkey: F bla -&gt; 
-      sev<br>
+      No orders submitted.<br>
     </div>
     <h3>
       Supply Center Ownership:
