--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -69,6 +69,18 @@
     <h3 class="results">No results - deadline for issuing movement orders is Sunday 14th February at 1200 GMT.</h3>
     <iframe class="status" src="static/S1871Dsta.html" width="100%" style="border:none;"></iframe>
   </div>
+  <div class="rounds">
+    <h2 class="w3-center">Spring 1871 movement orders</h2>
+    <img class="maps" src="static/Standard (6 Players)-S1871Ma.png" style="width:100%">
+    <iframe class="results" src="static/S1871Mres.html" width="100%" style="border:none;"></iframe>
+    <iframe class="status" src="static/S1871Msta.html" width="100%" style="border:none;"></iframe>
+  </div>
+  <div class="rounds">
+    <h2 class="w3-center">Fall 1871 starting position</h2>
+    <img class="maps" src="static/Standard (6 Players)-F1871M.png" style="width:100%">
+    <h3 class="results">No results - deadline for issuing movement orders is Wednesday 17th February at 1800 GMT.</h3>
+    <iframe class="status" src="static/F1870Dsta.html" width="100%" style="border:none;"></iframe>
+  </div>
 
   <button class="w3-button w3-black w3-display-left" onclick="plusDivs(-1)">&#10094;</button>
   <button class="w3-button w3-black w3-display-right" onclick="plusDivs(1)">&#10095;</button>
