--- a/diplomacy/static/order statistics.html
+++ b/diplomacy/static/order statistics.html
@@ -106,6 +106,35 @@
             60%
           </td>
         </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1871</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            75%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            82%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -205,6 +234,35 @@
           </td>
           <td>
             63%
+          </td>
+        </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1871</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            67%
+          </td>
+          <td>
+            
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            94%
           </td>
         </tr>
       </table>
@@ -308,6 +366,35 @@
             23%
           </td>
         </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1871</b>
+          </td>
+          <td>
+            33%
+          </td>
+          <td>
+            25%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            25%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            40%
+          </td>
+          <td>
+            20%
+          </td>
+          <td>
+            20%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -408,6 +495,35 @@
           </td>
           <td>
             0%
+          </td>
+        </tr>
+        <tr bgcolor="#E6EEF0">
+          <td>
+            <b>Spring, 1871</b>
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            25%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            4%
           </td>
         </tr>
       </table>
