--- a/diplomacy/status.html
+++ b/diplomacy/status.html
@@ -9,14 +9,14 @@
   </head>
   <body>
     <h2 class="centered">
-      Results for Fall, 1870 (Movement)
+      Results for Spring, 1871 (Movement)
     </h2>
     <h3>
       General Notices:
     </h3>
     <div class="indent1cm">
       No retreating units; retreat phase skipped.<br>Order resolution 
-      completed on 10-Feb-2021 at 18:18:03 GMT<br>
+      completed on 14-Feb-2021 at 12:35:39 GMT<br>
     </div>
     <h3>
       Order Results:
@@ -25,55 +25,36 @@
       <b>Austria:</b>
 
       <div class="indent1cm">
-        <i>No order for unit at Adriatic Sea. Hold order assigned.</i><br><br>Austria: 
-        F adr Holds<br>Austria: A bud Supports A vie<br>Austria: A vie 
-        Supports A bud<br>
+        Austria: F adr Supports A vie -&gt; tri<br>Austria: A bud Holds<br>Austria: 
+        A vie -&gt; tri<br>
       </div>
     </div>
     <div class="indent1cm">
       <b>England:</b>
 
       <div class="indent1cm">
-        Supply centers were gained. Units that may be built: 1.<br>
-      </div>
-      <div class="indent1cm">
-        England: F nth Convoys A yor -&gt; hol<br>England: F nwg -&gt; nwy<br><u>England: 
-        A yor -&gt; hol</u>
-
-        <div class="indent1cm" style="margin-bottom: 3pt">
-          <i>Bounced with ruh (1 against 1). </i><br><i>Convoy path taken: 
-          yor&#8594;nth&#8594;hol. </i>
-        </div>
+        England: F lon -&gt; nth<br>England: F nth -&gt; hel<br>England: F nwy 
+        Supports F bot -&gt; swe<br>England: A yor Holds<br>
       </div>
     </div>
     <div class="indent1cm">
       <b>France:</b>
 
       <div class="indent1cm">
-        Supply centers were gained. Units that may be built: 1.<br>
-      </div>
-      <div class="indent1cm">
-        France: A bur Supports F pic -&gt; bel<br>France: F pic -&gt; bel<br>France: 
-        A pie -&gt; tyr<br>
+        France: F bel Holds<br>France: A bur -&gt; mar<br>France: A mar -&gt; spa<br>France: 
+        A tyr Holds<br>
       </div>
     </div>
     <div class="indent1cm">
       <b>Germany:</b>
 
       <div class="indent1cm">
-        Supply centers were gained. Units that may be built: 1.<br>
-      </div>
-      <div class="indent1cm">
-        Germany: A ber -&gt; kie<br><u>Germany: F den -&gt; swe</u>
+        Germany: F ber -&gt; bal<br><u>Germany: F den -&gt; swe</u>
 
         <div class="indent1cm" style="margin-bottom: 3pt">
-          <i>Bounced with bot (1 against 1). </i>
+          <i>Failed. </i>
         </div>
-        <u>Germany: A ruh -&gt; hol</u>
-
-        <div class="indent1cm" style="margin-bottom: 3pt">
-          <i>Bounced with yor (1 against 1). </i>
-        </div>
+        Germany: A kie Supports A ruh -&gt; hol<br>Germany: A ruh -&gt; hol<br>
       </div>
     </div>
     <div class="indent1cm">
@@ -90,35 +71,16 @@
       <b>Russia:</b>
 
       <div class="indent1cm">
-        Supply centers were gained. Units that may be built: 1.<br>
-      </div>
-      <div class="indent1cm">
-        Russia: A gal -&gt; rum<br><u>Russia: F bot -&gt; swe</u>
-
-        <div class="indent1cm" style="margin-bottom: 3pt">
-          <i>Bounced with den (1 against 1). </i>
-        </div>
-        <u>Russia: F sev Supports A gal -&gt; rum</u>
-
-        <div class="indent1cm" style="margin-bottom: 3pt">
-          <i>Support cut by Move from Black Sea. </i>
-        </div>
-        Russia: A war -&gt; gal<br>
+        Russia: A gal -&gt; boh<br>Russia: F bot -&gt; swe<br>Russia: A rum 
+        Supports F sev<br>Russia: F sev Supports A rum<br>Russia: A war -&gt; gal<br>
       </div>
     </div>
     <div class="indent1cm">
       <b>Turkey:</b>
 
       <div class="indent1cm">
-        Supply centers were gained. Units that may be built: 2.<br>
-      </div>
-      <div class="indent1cm">
-        <u>Turkey: F bla -&gt; sev</u>
-
-        <div class="indent1cm" style="margin-bottom: 3pt">
-          <i>Bounced with sev (1 against 1). </i>
-        </div>
-        Turkey: A bul -&gt; gre<br>Turkey: A con -&gt; bul<br>
+        Turkey: F bla Holds<br>Turkey: A bul Supports A gre -&gt; ser<br>Turkey: 
+        F con -&gt; aeg<br>Turkey: A gre -&gt; ser<br>Turkey: F smy -&gt; eas<br>
       </div>
     </div>
   </body>
