--- a/diplomacy/europe-map.html
+++ b/diplomacy/europe-map.html
@@ -7,7 +7,7 @@
     <meta name="dcterms.created" content="Wed, 10 Feb 2021 15:31:51 GMT">
     <meta name="description" content="">
     <meta name="keywords" content="">
-    <title>Order statistics</title>
+    <title>Europe map</title>
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <script src="https://www.w3schools.com/lib/w3.js"></script>
     
@@ -19,16 +19,16 @@
 <div class="w3-sidebar w3-bar-block w3-gray" style="width:20%">
   <h3 class="w3-center w3-black">Menu</h3>
   <a href="index.html" class="w3-bar-item w3-button">Maps/ Results/ Status</a>
-  <a href="#" class="w3-bar-item w3-button">Order statistics</a>
+  <a href="order-statistics.html" class="w3-bar-item w3-button">Order statistics</a>
   <a href="supply-centre-history.html" class="w3-bar-item w3-button">Supply centre history</a>
-  <a href="europe-map.html" class="w3-bar-item w3-button">Europe map</a>
+  <a href="#" class="w3-bar-item w3-button">Europe map</a>
 </div>
 
 <div style="margin-left:20%">
 
   <div class="w3-content w3-display-container">
-    <h2 class="w3-center">Order statistics</h2>
-	<iframe src="static/order statistics.html" width="100%" height="2000" style="border:none;"></iframe>
+    <h2 class="w3-center">Europe map</h2>
+    <img src="static/Europe map.png" style="width:100%">
   </div>
 </div>
 
