--- a/diplomacy/index.html
+++ b/diplomacy/index.html
@@ -27,6 +27,7 @@
   <button class="w3-bar-item w3-button" onclick="status()">Status</button>
   <a href="order-statistics.html" class="w3-bar-item w3-button">Order statistics</a>
   <a href="supply-centre-history.html" class="w3-bar-item w3-button">Supply centre history</a>
+  <a href="europe-map.html" class="w3-bar-item w3-button">Europe map</a>
 </div>
 
 <div style="margin-left:20%">
