--- a/diplomacy/supply-centre-history.html
+++ b/diplomacy/supply-centre-history.html
@@ -21,6 +21,7 @@
   <a href="index.html" class="w3-bar-item w3-button">Maps/ Results/ Status</a>
   <a href="order-statistics.html" class="w3-bar-item w3-button">Order statistics</a>
   <a href="#" class="w3-bar-item w3-button">Supply centre history</a>
+  <a href="europe-map.html" class="w3-bar-item w3-button">Europe map</a>
 </div>
 
 <div style="margin-left:20%">
