--- a/diplomacy/static/order statistics.html
+++ b/diplomacy/static/order statistics.html
@@ -135,6 +135,35 @@
             82%
           </td>
         </tr>
+        <tr>
+          <td>
+            <b>Fall, 1871</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            25%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            60%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            69%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -263,6 +292,35 @@
           </td>
           <td>
             94%
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <b>Fall, 1871</b>
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            100%
+          </td>
+          <td>
+            83%
           </td>
         </tr>
       </table>
@@ -395,6 +453,35 @@
             20%
           </td>
         </tr>
+        <tr>
+          <td>
+            <b>Fall, 1871</b>
+          </td>
+          <td>
+            33%
+          </td>
+          <td>
+            50%
+          </td>
+          <td>
+            50%
+          </td>
+          <td>
+            25%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            40%
+          </td>
+          <td>
+            40%
+          </td>
+          <td>
+            34%
+          </td>
+        </tr>
       </table>
     </div>
     <h2 style="margin-top: 1cm">
@@ -524,6 +611,35 @@
           </td>
           <td>
             4%
+          </td>
+        </tr>
+        <tr>
+          <td>
+            <b>Fall, 1871</b>
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            25%
+          </td>
+          <td>
+            50%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            40%
+          </td>
+          <td>
+            0%
+          </td>
+          <td>
+            16%
           </td>
         </tr>
       </table>
