--- a/diplomacy/static/F1871Asta.html
+++ b/diplomacy/static/F1871Asta.html
@@ -9,7 +9,7 @@
   </head>
   <body>
     <h2 class="centered">
-      Status for Fall, 1871 (Retreat)
+      Status for Fall, 1871 (Adjustment)
     </h2>
     <h3>
       Unit Locations:
@@ -50,13 +50,13 @@
             A por
           </td>
           <td>
-            <u>A</u> <u>hol</u>
+            A kie
           </td>
           <td bgcolor="F0F8FF">
             A rom
           </td>
           <td>
-            <u>A</u> <u>rum</u>
+            A boh
           </td>
           <td bgcolor="F0F8FF">
             A rum
@@ -73,13 +73,13 @@
             A spa
           </td>
           <td>
-            A kie
+            A ruh
           </td>
           <td bgcolor="F0F8FF">
             F nap
           </td>
           <td>
-            A boh
+            A bud
           </td>
           <td bgcolor="F0F8FF">
             A ser
@@ -169,19 +169,19 @@
       <b>England</b>
     </div>
     <div class="indent2cm">
-      No orders submitted.<br>
+      England: Builds A lon<br>
     </div>
     <div class="indent1cm">
       <b>France</b>
     </div>
     <div class="indent2cm">
-      No orders submitted.<br>
+      France: Builds A par<br>France: Builds F mar<br>
     </div>
     <div class="indent1cm">
       <b>Germany</b>
     </div>
     <div class="indent2cm">
-      Germany: A hol -&gt; ruh<br>
+      Germany: Removes F den<br>
     </div>
     <div class="indent1cm">
       <b>Italy</b>
@@ -193,31 +193,37 @@
       <b>Russia</b>
     </div>
     <div class="indent2cm">
-      Russia: A rum -&gt; bud<br>
+      Russia: Builds A mos<br>Russia: Builds A war<br>
     </div>
     <div class="indent1cm">
       <b>Turkey</b>
     </div>
     <div class="indent2cm">
-      No orders submitted.<br>
+      Turkey: Builds F con<br>Turkey: Builds A smy<br>
     </div>
     <h3>
       Supply Center Ownership:
     </h3>
     <div class="indent1cm">
-      <b>Austria:</b> Budapest, Trieste, Venice, Vienna (4 total).<br><b>England:</b> 
+      <b>Austria:</b> Trieste, Venice, Vienna (3 total).<br><b>England:</b> 
       Edinburgh, Holland, Liverpool, London, Norway (5 total).<br><b>France:</b> 
       Belgium, Brest, Marseilles, Paris, Portugal, Spain (6 total).<br><b>Germany:</b> 
       Berlin, Denmark, Kiel (3 total).<br><b>Italy:</b> Naples, Rome (2 total).<br><b>Russia:</b> 
-      Moscow, Munich, Sevastopol, St. Petersburg, Sweden, Warsaw (6 total).<br><b>Turkey:</b> 
-      Ankara, Bulgaria, Constantinople, Greece, Rumania, Serbia, Smyrna (7 
-      total).<br>
+      Budapest, Moscow, Munich, Sevastopol, St. Petersburg, Sweden, Warsaw (7 
+      total).<br><b>Turkey:</b> Ankara, Bulgaria, Constantinople, Greece, 
+      Rumania, Serbia, Smyrna (7 total).<br>
     </div>
     <h3>
-      Dislodged Units:
+      Adjustments:
     </h3>
     <div class="indent1cm">
-      <b>Germany:</b> Army Holland.<br><b>Russia:</b> Army Rumania.<br>
+      <b>Austria</b>: 3 supply centers, 3 units. No units to build or remove.<br><b>England</b>: 
+      5 supply centers, 4 units. 1 unit may be built.<br><b>France</b>: 6 
+      supply centers, 4 units. 2 units may be built.<br><b>Germany</b>: 3 
+      supply centers, 4 units. 1 unit must be removed.<br><b>Italy</b>: 2 
+      supply centers, 2 units. No units to build or remove.<br><b>Russia</b>: 
+      7 supply centers, 5 units. 2 units may be built.<br><b>Turkey</b>: 7 
+      supply centers, 5 units. 2 units may be built.<br>
     </div>
   </body>
 </html>
