--- a/diplomacy/europe-map.html
+++ b/diplomacy/europe-map.html
@@ -19,15 +19,15 @@
 <div class="w3-sidebar w3-bar-block w3-gray" style="width:20%">
   <h3 class="w3-center w3-black">Menu</h3>
   <a href="index.html" class="w3-bar-item w3-button">Maps/ Results/ Status</a>
+  <hr />
   <a href="order-statistics.html" class="w3-bar-item w3-button">Order statistics</a>
   <a href="supply-centre-history.html" class="w3-bar-item w3-button">Supply centre history</a>
-  <a href="#" class="w3-bar-item w3-button">Europe map</a>
+  <a href="#" class="w3-bar-item w3-button w3-blue-grey">Europe map</a>
 </div>
 
 <div style="margin-left:20%">
 
   <div class="w3-content w3-display-container">
-    <h2 class="w3-center">Europe map</h2>
     <img src="static/Europe map.png" style="width:100%">
   </div>
 </div>
