--- a/diplomacy/order-statistics.html
+++ b/diplomacy/order-statistics.html
@@ -19,7 +19,8 @@
 <div class="w3-sidebar w3-bar-block w3-gray" style="width:20%">
   <h3 class="w3-center w3-black">Menu</h3>
   <a href="index.html" class="w3-bar-item w3-button">Maps/ Results/ Status</a>
-  <a href="#" class="w3-bar-item w3-button">Order statistics</a>
+  <hr />
+  <a href="#" class="w3-bar-item w3-button w3-blue-grey">Order statistics</a>
   <a href="supply-centre-history.html" class="w3-bar-item w3-button">Supply centre history</a>
   <a href="europe-map.html" class="w3-bar-item w3-button">Europe map</a>
 </div>
@@ -27,7 +28,6 @@
 <div style="margin-left:20%">
 
   <div class="w3-content w3-display-container">
-    <h2 class="w3-center">Order statistics</h2>
 	<iframe src="static/order statistics.html" width="100%" height="2000" style="border:none;"></iframe>
   </div>
 </div>
