--- a/diplomacy/supply-centre-history.html
+++ b/diplomacy/supply-centre-history.html
@@ -19,15 +19,15 @@
 <div class="w3-sidebar w3-bar-block w3-gray" style="width:20%">
   <h3 class="w3-center w3-black">Menu</h3>
   <a href="index.html" class="w3-bar-item w3-button">Maps/ Results/ Status</a>
+  <hr />
   <a href="order-statistics.html" class="w3-bar-item w3-button">Order statistics</a>
-  <a href="#" class="w3-bar-item w3-button">Supply centre history</a>
+  <a href="#" class="w3-bar-item w3-button w3-blue-grey">Supply centre history</a>
   <a href="europe-map.html" class="w3-bar-item w3-button">Europe map</a>
 </div>
 
 <div style="margin-left:20%">
 
   <div class="w3-content w3-display-container">
-    <h2 class="w3-center">Supply centre history</h2>
 	<iframe src="static/supply centre history.html" width="100%" height="2000" style="border:none;"></iframe>
   </div>
 </div>
